--- a/classes/styles/authorprofile.css
+++ b/classes/styles/authorprofile.css
@@ -4,6 +4,10 @@
     --backgroundclr: #333;
     --btnclr: #29fd53;
     --sitebgclr: #fdfdfd;
+    --primaryclr: #59B8A2;
+    --secondaryclr: #1C3253;
+    --thirdclr: #bbb5ac;
+    --fourthclr: #ffd101;
 }
 
 #auteur
@@ -26,8 +30,7 @@
 .box
 {
     position: relative;
-    width: 300px;/*à modifier à 340px pour les écrans plus larges*/
-    /* height: 300px; */
+    width: 300px;
     min-height: 300px;
     background: rgba(0,0,0,0.7);
     border-radius: 50%;
@@ -40,9 +43,9 @@
     content: '';
     position: absolute;
     inset: -10px 140px;
-    background: linear-gradient(315deg, #00ccff, #d400d4);
+    background: linear-gradient(315deg, var(--primaryclr), var(--fourthclr));
     transition: 0.5s;
-    /* animation: animate 4s linear infinite; */
+    animation: animate 4s linear infinite;
 }
 
 .box:hover::before
@@ -67,7 +70,7 @@
     content: '';
     position: absolute;
     inset: 6px;
-    background: #162052;
+    background: var(--secondaryclr);
     border-radius: 50%;
     z-index: 1;
 }
@@ -137,18 +140,8 @@
     transition: 0.5s;
 }
 
-/*à rajouter dans le responsive de plus grande taille*/
-/* .content button:hover
-{
-    letter-spacing: 0.2em;
-    cursor: pointer;
-} */
-
 .displayed_bio
 {
-    /* margin-top: 10px; */
-    position: absolute;
-    top: 325px;
     padding: 10px;
     padding-bottom: 2px;
     font-size: 1rem;
@@ -167,4 +160,40 @@
 {
     opacity: 1;
     padding-top: 170px;
+    height: auto;
+}
+
+@media screen and (min-width: 1024px)
+{
+    .full-bio
+    {
+        display: flex;
+        max-width: 60%;
+    }
+
+    .displayed_bio
+    {
+        display: none;
+        padding-top: 10px;
+    }
+
+    .displayed_bio.active
+    {
+        display: flex;
+        height: 400px;
+        width: auto;
+        padding-top: 10px;
+    }
+
+    .box
+    {
+        width: 400px;
+        height: 400px;
+    }
+
+    .content button:hover
+    {
+        letter-spacing: 0.2em;
+        cursor: pointer;
+    }    
 }
