--- a/classes/styles/authorprofile.css
+++ b/classes/styles/authorprofile.css
@@ -24,7 +24,7 @@
 {
     border-radius: 50%;
     border: 6px solid #fff;
-    z-index: 1; 
+    z-index: 2; 
 }
 
 .box
@@ -42,15 +42,10 @@
 {
     content: '';
     position: absolute;
-    inset: -10px 140px;
+    inset: -20px 0px;
     background: linear-gradient(315deg, var(--primaryclr), var(--fourthclr));
     transition: 0.5s;
     animation: animate 4s linear infinite;
-}
-
-.box:hover::before
-{
-    inset: -20px 0px;
 }
 
 @keyframes animate
@@ -102,10 +97,7 @@
     z-index: 3;
 }
 
-.box:hover .content img
-{
-    opacity: 0;
-}
+
 
 .content h2
 {
@@ -126,63 +118,56 @@
 
 .content button
 {
-    position: relative;
-    margin-top: 10px;
-    padding: 10px 20px;
-    background: #fff;
-    color: #070a1c;
-    border-radius: 25px;
-    font-weight: 500;
-    font-size: 1.25em;
-    text-transform: uppercase;
-    letter-spacing: 00.05em;
-    text-decoration: none;
-    transition: 0.5s;
+display: none;
 }
 
 .displayed_bio
 {
     padding: 10px;
-    padding-bottom: 2px;
+    padding-top: 150px;
     font-size: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 310px;
+    width: 300px;
     background: rgba(0,0,0,0.7);
     color: #fff;
-    opacity: 0;
-    transition: all 0.5s;
+    opacity: 1;
+    transform: translateY(-135px);
+
+    /* transition: all 0.5s; */
 }
 
-.displayed_bio.active
-{
-    opacity: 1;
-    padding-top: 170px;
-    height: auto;
-}
+
 
 @media screen and (min-width: 1024px)
 {
     .full-bio
     {
         display: flex;
-        max-width: 60%;
+        max-width: 70%;
     }
 
     .displayed_bio
     {
-        display: none;
-        padding-top: 10px;
+        /* display: none; */
+        opacity: 0;
+        padding-left: 220px;
+        transform: translateX(-600px);
+        transition: all 0.5s;
     }
 
     .displayed_bio.active
     {
-        display: flex;
+        /* display: flex; */
+        opacity: 1;
+        transform: translateX(-200px);
         height: 400px;
+        /* height: auto; */
         width: auto;
-        padding-top: 10px;
+        /* padding-top: 10px; */
+        padding-top: 170px;
     }
 
     .box
@@ -191,9 +176,41 @@
         height: 400px;
     }
 
+    .box:hover .content img
+    {
+        opacity: 0;
+    }
+
+    .content button
+    {
+        display: flex;
+        position: relative;
+        margin-top: 10px;
+        padding: 10px 20px;
+        background: #fff;
+        color: #070a1c;
+        border-radius: 25px;
+        font-weight: 500;
+        font-size: 1.25em;
+        text-transform: uppercase;
+        letter-spacing: 00.05em;
+        text-decoration: none;
+        transition: 0.5s;
+    }
+
     .content button:hover
     {
         letter-spacing: 0.2em;
         cursor: pointer;
-    }    
+    }
+    
+    .box::before
+    {
+        inset: -10px 140px;
+    }
+
+    .box:hover::before
+    {
+        inset: -20px 0px;
+    }
 }
