--- a/classes/styles/lastpost.css
+++ b/classes/styles/lastpost.css
@@ -54,3 +54,14 @@
     box-sizing: border-box;
     z-index: 1;
 }
+
+#adventure a
+{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+    background: var(--secondaryclr);
+    color: #fff;
+    border-radius: 25px;
+    text-decoration: none;
+}
