--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@
     font-family: 'Poppins', sans-serif;
 }
 
+html
+{
+    scroll-behavior: smooth;
+}
+
 body
 {
     background: var(--backgroundclr);
@@ -46,7 +51,7 @@ section
 {
     position: relative;
     width: 100%;
-    padding: 15px;
+    padding: 0px 15px;
     color: var(--backgroundclr);
     display: flex;
     flex-direction: column;
