--- a/View/register.html
+++ b/View/register.html
@@ -11,7 +11,11 @@
 </head>
 <body>
     <form method="post" novalidate>
-        <h1>Inscription</h1>
+        <h1>Connexion</h1>
+        <div class="inputBox">
+            <input type="email" name="email" required id="email">
+            <label for="email">email</label>
+        </div>
         <div class="inputBox">
             <input type="text" name="pseudo" required id="pseudo">
             <label for="pseudo">Pseudo</label>
@@ -20,10 +24,13 @@
             <input type="password" name="pass" required id="pass">
             <label for="pass">Mot de passe</label>
         </div>
+        <div class="inputBox">
+            <input type="password" name="confirm-pass" required id="confirm-pass">
+            <label for="confirm-pass">Confirmer le mot de passe</label>
+        </div>
         <div class="links">
-            <button type="submit">Se connecter</button>
+            <button type="submit">S'inscrire</button>
             <ul>
-                <li><a href="register.html" data-text="S'inscrire">S'inscrire</a></li>
                 <li><a href="#" data-text="Mot de passe oublié">Mot de passe oublié</a></li>
             </ul>
         </div>
