--- a/View/login.html
+++ b/View/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <form method="post" novalidate>
-        <h1>Inscription</h1>
+        <h1>Connexion</h1>
         <div class="inputBox">
             <input type="text" name="pseudo" required id="pseudo">
             <label for="pseudo">Pseudo</label>
