--- a/View/register.html
+++ b/View/register.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../classes/styles/login/desktop.css" media="screen AND (min-width: 1024px)">
 </head>
 <body>
-    <form method="post" novalidate>
-        <h1>Connexion</h1>
+    <form method="post" novalidate action="/register">
+        <h1>Inscription</h1>
         <div class="inputBox">
             <input type="email" name="email" required id="email">
             <label for="email">email</label>
