--- a/classes/styles/mobile/header.css
+++ b/classes/styles/mobile/header.css
@@ -1,9 +1,6 @@
 :root
 {
-    --clr: #222327;
-    --backgroundclr: #333;
-    --btnclr: #29fd53;
-    --sitebgclr: #fdfdfd;
+    --fontclr: #fdfdfd;
     --primaryclr: #59B8A2;
     --secondaryclr: #1C3253;
     --thirdclr: #bbb5ac;
@@ -35,7 +32,7 @@
 .header .titre
 {
     position: absolute;
-    top: -5%;
+    top: -4%;
     font-family: 'Dancing Script', sans-serif;
     text-align: center;
     z-index: 1;
@@ -71,7 +68,7 @@
     background: var(--secondaryclr);
     border: none;
     text-decoration: none;
-    color: #fff;
+    color: var(--fontclr);
     font-size: 10px;
     border-radius: 30px;
     bottom: 5%;
@@ -79,13 +76,7 @@
     z-index: 1;
 }
 
-.access-button:hover
-{
-    cursor: pointer;
-    box-shadow: 0 0 10px var(--primaryclr),
-                0 0 20px var(--primaryclr),
-                0 0 40px var(--primaryclr);
-}
+
 
 /* superposition papier déchiré */
 
@@ -97,7 +88,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(../../resources/images/alaska1.jpg);
+    background: url(../../../resources/images/alaska1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -109,42 +100,9 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url(../../resources/images/ripped-paper.jpg);
+    background: url(../../../resources/images/ripped-paper.jpg);
     background-size: cover;
     background-position: center;
     mix-blend-mode: lighten;
     filter: brightness(1.1);
-}
-
-@media screen and (min-width: 700px)
-{
-    .header .titre
-    {
-        top: 4px;
-        left: -20%;
-    }
-}
-
-
-@media screen and (min-width: 1024px)
-{
-    .header .titre
-    {
-        top: 4px;
-        left: -20%;
-    }
-
-    .header .author
-    {
-        bottom: 13%;
-        right: 9%;
-        font-size: 4em;
-    }
-
-    .header .gad
-    {
-        bottom: 5%;
-        right: 5%;
-        font-size: 5em;
-    }
 }
