--- a/classes/styles/mobile/style.css
+++ b/classes/styles/mobile/style.css
@@ -36,6 +36,8 @@ body
     background: var(--backgroundclr);
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 h1, h2, h3, h4, h5, h6
