--- a/classes/styles/tablet/authorprofile.css
+++ b/classes/styles/tablet/authorprofile.css
@@ -1,3 +1,22 @@
+#author
+{
+    padding: 0px;
+}
+
+.full-bio
+{
+    background: url(../../../resources/images/alaska4.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+}
+
 .box
 {
     width: 400px;
@@ -7,10 +26,10 @@
 .displayed_bio
 {
     padding: 10px;
-    padding-top: 190px;
+    margin-top: 10px;
     font-size: 1.4rem;
-    width: 400px;
-    background: rgba(0,0,0,0.7);
+    width: 80%;
+    background: rgba(0,0,0,0.4);
     color: var(--pclr);
-    transform: translateY(-185px);
+    transform: translateY(0px);
 }
