views ok pour membres

--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -23,7 +23,7 @@
 
 body
 {
-    background: url(../../resources/images/alaska5.jpg);
+    background: url(../images/alaska5.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
