--- a/src/View/Users/login.html
+++ b/src/View/Users/login.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Se connecter</title>
-    <link rel="stylesheet" href="../classes/styles/login.css">
-    <link rel="stylesheet" href="../classes/styles/login/tablett.css" media="screen AND (min-width: 600px)">
-    <link rel="stylesheet" href="../classes/styles/login/desktop.css" media="screen AND (min-width: 1024px)">
+    <link rel="stylesheet" href="/styles/login.css">
+    <link rel="stylesheet" href="/styles/login/tablett.css" media="screen AND (min-width: 600px)">
+    <link rel="stylesheet" href="/styles/login/desktop.css" media="screen AND (min-width: 1024px)">
 </head>
 <body>
     <form method="post" novalidate>
@@ -23,7 +23,7 @@
         <div class="links">
             <button type="submit">Se connecter</button>
             <ul>
-                <li><a href="register.html" data-text="S'inscrire">S'inscrire</a></li>
+                <li><a href="/users/register" data-text="S'inscrire">S'inscrire</a></li>
                 <li><a href="#" data-text="Mot de passe oublié">Mot de passe oublié</a></li>
             </ul>
         </div>
