--- a/src/View/Users/register.html
+++ b/src/View/Users/register.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Se connecter</title>
-    <link rel="stylesheet" href="../classes/styles/login.css">
-    <link rel="stylesheet" href="../classes/styles/login/tablett.css" media="screen AND (min-width: 600px)">
-    <link rel="stylesheet" href="../classes/styles/login/desktop.css" media="screen AND (min-width: 1024px)">
+    <link rel="stylesheet" href="/styles/login.css">
+    <link rel="stylesheet" href="/styles/login/tablett.css" media="screen AND (min-width: 600px)">
+    <link rel="stylesheet" href="/styles/login/desktop.css" media="screen AND (min-width: 1024px)">
 </head>
 <body>
     <form method="post" novalidate action="/register">
