--- a/src/View/Users/register.html
+++ b/src/View/Users/register.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/styles/login/desktop.css" media="screen AND (min-width: 1024px)">
 </head>
 <body>
-    <form method="post" novalidate action="/register">
+    <form method="post" novalidate action="/users/register">
         <h1>Inscription</h1>
         <div class="inputBox">
             <input type="email" name="email" required id="email">
