--- a/public/styles/desktop/style.css
+++ b/public/styles/desktop/style.css
@@ -1,6 +1,6 @@
 body
 {
-    background: url(../../../resources/images/alaska3.jpg);
+    background: url(/images/alaska3.jpg);
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
