--- a/public/styles/tablet/authorprofile.css
+++ b/public/styles/tablet/authorprofile.css
@@ -5,7 +5,7 @@
 
 .full-bio
 {
-    background: url(../../../resources/images/alaska4.jpg);
+    background: url(/images/alaska4.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
