--- a/public/styles/mobile/header.css
+++ b/public/styles/mobile/header.css
@@ -88,7 +88,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(../../../resources/images/alaska1.jpg);
+    background: url(/images/alaska1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -100,7 +100,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url(../../../resources/images/ripped-paper.jpg);
+    background: url(/images/ripped-paper.jpg);
     background-size: cover;
     background-position: center;
     mix-blend-mode: lighten;
