--- a/public/styles/mobile/mainmenu.css
+++ b/public/styles/mobile/mainmenu.css
@@ -62,6 +62,12 @@ nav .user
     color: #fff;
 }
 
+nav a
+{
+    display: none;
+    opacity: 0;
+}
+
 nav p
 {
     display: none;
@@ -72,6 +78,14 @@ nav p
     color: #fff;
     white-space: nowrap;
     opacity: 0;
+}
+
+nav.active a
+{
+    opacity: 1;
+    display: flex;
+    color: #fff;
+    text-decoration: none;
 }
 
 nav.active p
