--- a/public/styles/mobile/mainmenu.css
+++ b/public/styles/mobile/mainmenu.css
@@ -23,7 +23,7 @@ nav
     justify-content: space-between;
     top: 0;
     left: 0;
-    width: 120px;
+    width: 100%;
     height: 60px;
     background: var(--backgroundclr);
     box-shadow: 0 25px 35px rgba(0,0,0,0.2);
@@ -35,7 +35,7 @@ nav
 
 nav.active
 {
-    width: 300px;
+    width: 100%;
     height: 375px;
     transition: height 0.5s, width 0.5s;
     transition-delay: 0.75s, 0s;
