--- a/public/styles/tablet/chapterlist.css
+++ b/public/styles/tablet/chapterlist.css
@@ -32,7 +32,7 @@ html
 
 body
 {
-    /* background-image: url(/images/alaska6.jpg); */
+    background-image: url(/images/alaska6.jpg);
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
