--- a/public/styles/mobile/chapterlist.css
+++ b/public/styles/mobile/chapterlist.css
@@ -41,10 +41,11 @@ body
 
 .site
 {
+    margin-top: 60px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -53,6 +54,7 @@ h1
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
     font-size: 1.2rem;
     border-top: 1px solid var(--backgroundclr);
     border-bottom: 1px solid var(--backgroundclr);
