--- a/public/styles/mobile/mainmenu.css
+++ b/public/styles/mobile/mainmenu.css
@@ -33,10 +33,10 @@ nav
     top: 0;
     left: 0;
     width: 100%;
-    height: 60px;
+    max-height: 60px;
     background: var(--backgroundclr);
     box-shadow: 0 25px 35px rgba(0,0,0,0.2);
-    transition: height 0.5s, width 0.5s;
+    transition: max-height 0.5s, width 0.5s;
     transition-delay: 0s, 0.75s;
     overflow: hidden;
     z-index: 50;
@@ -45,8 +45,8 @@ nav
 nav.active
 {
     width: 100%;
-    height: 375px;
-    transition: height 0.5s, width 0.5s;
+    max-height: 500px;
+    transition: max-height 0.5s, width 0.5s;
     transition-delay: 0.75s, 0s;
 }
 
