--- a/public/styles/mobile/admin.css
+++ b/public/styles/mobile/admin.css
@@ -5,7 +5,6 @@
 
 :root
 {
-    --clr: #222327;
     --backgroundclr: #333;
     --alternatebgclr: #fdfdfd;
     --h1clr: #333;
@@ -129,17 +128,33 @@ body
 
 .siteadmin .adminbox
 {
+    position: relative;
     width: 90%;
-    height: auto;
-    min-height: 400px;
-    max-height: 600px;
+    height: 600px;
     overflow: auto;
     background: rgba(255,255,255,0.8);
     border-radius: 5px;
-    margin: 10px 0 10px 0;
-    padding: 5px 10px;
+    margin: 25px 0 10px 0;
+    padding: 35px 5px 10px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.siteadmin .adminbox .icon, .write .icon
+{
+    position: absolute;
+    top: -25px;
+    left: 15px;
+    display: block;
+    min-width: 55px;
+    height: 55px;
+    font-size: 1.75rem;
+    border-radius: 10px;
+    color: var(--pclr);
+    background: var(--clr);
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
