--- a/public/styles/mobile/admin.css
+++ b/public/styles/mobile/admin.css
@@ -129,22 +129,29 @@ body
 .siteadmin .adminbox
 {
     position: relative;
-    width: 90%;
-    height: 600px;
-    overflow: auto;
+    width: 95%;
+    height: 450px;
     background: rgba(255,255,255,0.8);
     border-radius: 5px;
     margin: 25px 0 10px 0;
-    padding: 35px 5px 10px;
+    padding: 5px 5px 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.siteadmin .adminbox .list
+{
+    overflow: auto;
+    padding: 10px 0px;
+    margin-top: 25px;
+    width: 100%;
+}
+
 .siteadmin .adminbox .icon, .write .icon
 {
     position: absolute;
-    top: -25px;
+    top: -20px;
     left: 15px;
     display: block;
     min-width: 55px;
