--- a/public/styles/tablet/admin.css
+++ b/public/styles/tablet/admin.css
@@ -86,6 +86,7 @@ body
     list-style-type: none;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .siteadmin .chapters article .modify .notvisible 
@@ -101,9 +102,10 @@ body
     height: 30px;
     width: 100px;
     margin: 10px 15px;
-    font-size: 1rem;
+    font-size: .8rem;
     font-weight: 400;
-    color: var(--alternatebgclr);
+    color: var(--backgroundclr);
+    background-color: var(--alternatebgclr);
     border: 3px solid var(--primaryclr);
     border-radius: 20px;
 }
