--- a/public/styles/desktop/admin.css
+++ b/public/styles/desktop/admin.css
@@ -32,6 +32,11 @@
     border-radius: 0px;
 }
 
+.statistics .statbox h2
+{
+    font-size: .8rem;
+}
+
 .siteadmin .members, .siteadmin .write
 {
     display: flex;
@@ -108,6 +113,17 @@
     margin: 30px 0px;
     background: rgba(255,255,255,0.8);
     padding: 40px 10px 20px;
+}
+
+.dashboard #members.hidden, .dashboard #moderate.hidden, .dashboard #chapters.hidden, .dashboard #write.hidden
+{
+    display: none;
+}
+
+.dashboard .adminbox.active
+{
+    width: 100%;
+    height: 70vh;
 }
 
 .dashboard .write form
