redirect error controller

--- a/public/styles/mobile/admin.css
+++ b/public/styles/mobile/admin.css
@@ -35,7 +35,7 @@ body
 
 .site
 {
-    padding-top: 80px;
+    margin-top: 80px;
     display: flex;
     /* flex-direction: column; */
     justify-content: center;
