--- a/public/styles/desktop/authorprofile.css
+++ b/public/styles/desktop/authorprofile.css
@@ -3,6 +3,7 @@
     background: rgba(0,0,0,.5);
     padding-left: 15px;
     padding-right: 15px;
+    overflow: hidden;
 }
 
 #auteur h1
@@ -14,28 +15,37 @@
 {
     flex-direction: row;
     position: relative;
+    overflow: hidden;
     width: 100%;
     max-width: 100%;
+    height: 500px;
     background: none;
+    transform: translate(calc(50% - 250px));
+    transition: all 0.5s ease-in;
+}
+
+.full-bio.active
+{
+    transform: translate(0%);
+    height: 700px;
 }
 
 .displayed_bio
 {
-    display: none;
+    opacity: 0;
     background: none;
     padding-top: 10px;
     padding-right: 20px;
-    /* height: 400px; */
-    transform: max-height 0 opacity 0;
-    transition: all 0.5s;
+    transform: opacity 0;
+    transition: all 0.75s ease-in;
 }
 
 .displayed_bio.active
 {
     display: flex;
-    /* height: 400px; */
+    opacity: 1;
     width: auto;
-    transform: max-height 500px opacity 1;
+    transform: opacity 1;
 }
 
 .box
@@ -44,12 +54,7 @@
     height: 400px;
     min-width: 400px;
     translate: 0px;
-    transition: all 0.5s;
-}
-
-.box.active
-{
-    translate: -50px;
+    transition: all 0.5s ease-in;
 }
 
 .box:hover .content img
