--- a/public/styles/lastpost.css
+++ b/public/styles/lastpost.css
@@ -1,4 +1,4 @@
-.last-post
+/* .last-post
 {
     position: relative;
     width: 90%;
@@ -64,4 +64,4 @@
     color: #fff;
     border-radius: 25px;
     text-decoration: none;
-}
+} */
