--- a/public/styles/desktop/mainmenu.css
+++ b/public/styles/desktop/mainmenu.css
@@ -1,3 +1,26 @@
+.site
+{
+    justify-content: center;
+    align-items: center;
+}
+
+.main_menu
+{
+    width: 130%;
+    min-width: 100%;
+    max-width: 1006px;
+}
+
+.menu_access li a
+{
+    font-size: .8rem;
+}
+
+.main_menu .sup .user_name
+{
+    font-size: .8rem;
+}
+
 nav
 {
     width: 100%;
