--- a/public/styles/desktop/lastpost.css
+++ b/public/styles/desktop/lastpost.css
@@ -13,6 +13,63 @@
     --fourthclr: #ffd101;
 }
 
+#adventure .last-post
+{
+    margin-bottom: 30px;
+}
+
+#adventure .last-post-content
+{
+    display: flex;
+    width: 100%;
+}
+
+#adventure .last-post-content h2, #adventure .last-post-content p
+{
+    width: 50%;
+    padding: 20px 5px;
+}
+
+#adventure .last-post-content h2
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+}
+
+#adventure .last-post-content p
+{
+    display: flex;
+    align-items: center;
+}
+
+#adventure .last-post-content.active p
+{
+    transform-origin: 0% 50%;
+}
+
+@keyframes turnpage
+{
+    0%
+    {
+        transform: rotateY(0deg) skew(0deg, 0deg);
+        opacity: 1;
+        color: var(--backgroundclr);
+    }
+    50%
+    {
+        transform: rotateY(90deg) skew(15deg, 15deg);
+        opacity: 1;
+    }
+    100%
+    {
+        transform: rotateY(180deg) skew(0deg, 0deg);
+        opacity: 1;
+        color: var(--pclr);
+    }
+}
+
 #adventure a
 {
     background: var(--secondaryclr);
