--- a/public/styles/mobile/lastpost.css
+++ b/public/styles/mobile/lastpost.css
@@ -44,12 +44,13 @@
     font-size: 1rem;
     background: var(--pclr);
     box-shadow: 0 10px 10px var(--backgroundclr);
+    padding: 10px 5px;
 }
 
 #adventure .last-post-content.active p
 {
-    transform-origin: 0% 50%;
-    animation: turnpage 2s linear;
+    transform-origin: 10% 50%;
+    animation: turnpage 2.2s linear;
 }
 
 @keyframes turnpage
@@ -57,14 +58,17 @@
     0%
     {
         transform: rotateY(0deg) skew(0deg, 0deg);
+        opacity: 1;
     }
     50%
     {
         transform: rotateY(90deg) skew(15deg, 15deg);
+        opacity: .7;
     }
     100%
     {
         transform: rotateY(180deg) skew(0deg, 0deg);
+        opacity: 0;
     }
 }
 
